[package]
name = "diamond-node-subsystem-types"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
derive_more = "0.99.11"
futures = "0.3.17"
diamond-primitives = { path = "../../primitives" }
diamond-node-primitives = { path = "../primitives" }
diamond-node-network-protocol = { path = "../network/protocol" }
diamond-statement-table = { path = "../../statement-table" }
diamond-node-jaeger = { path = "../jaeger" }
diamond-overseer-gen = { path = "../overseer/overseer-gen" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
smallvec = "1.6.1"
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "master" }
thiserror = "1.0.26"
