[package]
name = "diamond-node-subsystem-util"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.51"
futures = "0.3.17"
itertools = "0.10"
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
pin-project = "1.0.8"
rand = "0.8.3"
thiserror = "1.0.26"
tracing = "0.1.27"
derive_more = "0.99.11"
lru = "0.6.6"

diamond-node-subsystem = { package = "diamond-node-subsystem", path = "../subsystem" }
diamond-node-jaeger = { path = "../jaeger" }
diamond-node-metrics = { path = "../metrics" }
diamond-node-network-protocol = { path = "../network/protocol" }
diamond-primitives = { path = "../../primitives" }
diamond-overseer = { path = "../overseer" }
metered-channel = { path = "../metered-channel" }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
assert_matches = "1.4.0"
env_logger = "0.9.0"
futures = { version = "0.3.17", features = ["thread-pool"] }
log = "0.4.13"
diamond-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
