[package]
name = "diamond-node-subsystem"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Subsystem traits and message definitions and the generated overseer"

[dependencies]
diamond-overseer = { path = "../overseer" }
diamond-node-subsystem-types = { path = "../subsystem-types" }
diamond-node-jaeger = { path = "../jaeger" }
