[package]
name = "diamond-voter-bags"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
generate-bags = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
structopt = "0.3.21"

westend-runtime = { path = "../../runtime/westend" }
gold-runtime = { path = "../../runtime/gold" }
diamond-runtime = { path = "../../runtime/diamond" }
