[package]
name = "bp-wococo"
description = "Primitives of Wococo runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

# Bridge Dependencies
bp-messages = { path = "../messages", default-features = false }
bp-diamond-core = { path = "../diamond-core", default-features = false }
bp-titan = { path = "../chain-titan", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }

# Substrate Based Dependencies
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" , default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-diamond-core/std",
	"bp-runtime/std",
	"bp-titan/std",
	"parity-scale-codec/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
]
