[package]
name = "diamond-node-core-av-store"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
futures-timer = "3.0.2"
kvdb = "0.10.0"
thiserror = "1.0.26"
tracing = "0.1.27"
bitvec = "0.20.1"

parity-scale-codec = { version = "2.0.0", features = ["derive"] }
erasure = { package = "diamond-erasure-coding", path = "../../../erasure-coding" }
diamond-subsystem = { package = "diamond-node-subsystem", path = "../../subsystem" }
diamond-node-subsystem-util = { path = "../../subsystem-util" }
diamond-overseer = { path = "../../overseer" }
diamond-primitives = { path = "../../../primitives" }
diamond-node-primitives = { path = "../../primitives" }

[dev-dependencies]
log = "0.4.13"
env_logger = "0.9.0"
assert_matches = "1.4.0"
kvdb-memorydb = "0.10.0"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
diamond-node-subsystem-util = { path = "../../subsystem-util" }
diamond-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
parking_lot = "0.11.1"
