[package]
name = "diamond-node-core-backing"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
diamond-primitives = { path = "../../../primitives" }
diamond-node-primitives = { path = "../../primitives" }
diamond-subsystem = { package = "diamond-node-subsystem", path = "../../subsystem" }
diamond-node-subsystem-util = { path = "../../subsystem-util" }
erasure-coding = { package = "diamond-erasure-coding", path = "../../../erasure-coding" }
statement-table = { package = "diamond-statement-table", path = "../../../statement-table" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
tracing = "0.1.27"
thiserror = "1.0.26"

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures = { version = "0.3.17", features = ["thread-pool"] }
assert_matches = "1.4.0"
diamond-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
