[package]
name = "diamond-node-core-candidate-validation"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
async-trait = "0.1.51"
futures = "0.3.17"
tracing = "0.1.27"

sp-maybe-compressed-blob = { package = "sp-maybe-compressed-blob", git = "https://github.com/paritytech/substrate", branch = "master" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["bit-vec", "derive"] }

diamond-primitives = { path = "../../../primitives" }
diamond-parachain = { path = "../../../parachain" }
diamond-node-primitives = { path = "../../primitives" }
diamond-node-subsystem = { package = "diamond-node-subsystem", path = "../../subsystem" }
diamond-node-subsystem-util = { path = "../../subsystem-util" }

[target.'cfg(not(any(target_os = "android", target_os = "unknown")))'.dependencies]
diamond-node-core-pvf = { path = "../pvf" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
futures = { version = "0.3.17", features = ["thread-pool"] }
assert_matches = "1.4.0"
diamond-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
