[package]
name = "diamond-node-core-dispute-participation"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
thiserror = "1.0.26"
tracing = "0.1.27"

diamond-node-primitives = { path = "../../primitives" }
diamond-node-subsystem = { path = "../../subsystem" }
diamond-primitives = { path = "../../../primitives" }

[dev-dependencies]
assert_matches = "1.5.0"
parity-scale-codec = "2.0.0"
diamond-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers"}
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
