[package]
name = "diamond-approval-distribution"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
diamond-node-primitives = { path = "../../primitives" }
diamond-node-network-protocol = { path = "../protocol" }
diamond-node-subsystem = { path = "../../subsystem" }
diamond-node-subsystem-util = { path = "../../subsystem-util" }
diamond-primitives = { path = "../../../primitives" }

futures = "0.3.17"
tracing = "0.1.27"

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["std"] }

diamond-node-subsystem-util = { path = "../../subsystem-util" }
diamond-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }

assert_matches = "1.4.0"
schnorrkel = { version = "0.9.1", default-features = false }
rand_core = "0.5.1" # should match schnorrkel
env_logger = "0.9.0"
log = "0.4.13"
