[package]
name = "diamond-availability-recovery"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
lru = "0.6.6"
rand = "0.8.3"
thiserror = "1.0.26"
tracing = "0.1.27"

diamond-erasure-coding = { path = "../../../erasure-coding" }
diamond-primitives = { path = "../../../primitives" }
diamond-node-primitives = { path = "../../primitives" }
diamond-subsystem = { package = "diamond-node-subsystem", path = "../../subsystem" }
diamond-node-subsystem-util = { path = "../../subsystem-util" }
diamond-node-network-protocol = { path = "../../network/protocol" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }

[dev-dependencies]
assert_matches = "1.4.0"
env_logger = "0.9.0"
futures-timer = "3.0.2"
log = "0.4.11"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }

diamond-subsystem-testhelpers = { package = "diamond-node-subsystem-test-helpers", path = "../../subsystem-test-helpers" }
