[package]
name = "diamond-availability-bitfield-distribution"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
tracing = "0.1.27"
diamond-primitives = { path = "../../../primitives" }
diamond-subsystem = { package = "diamond-node-subsystem", path = "../../subsystem" }
diamond-node-subsystem-util = { path = "../../subsystem-util" }
diamond-node-network-protocol = { path = "../../network/protocol" }

[dev-dependencies]
diamond-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
bitvec = { version = "0.20.1", default-features = false, features = ["alloc"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
maplit = "1.0.2"
log = "0.4.13"
env_logger = "0.9.0"
assert_matches = "1.4.0"
