[package]
name = "diamond-collator-protocol"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
always-assert = "0.1.2"
derive_more = "0.99.14"
futures = "0.3.17"
futures-timer = "3"
thiserror = "1.0.26"
tracing = "0.1.27"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }

diamond-primitives = { path = "../../../primitives" }
diamond-node-network-protocol = { path = "../../network/protocol" }
diamond-node-primitives = { path = "../../primitives" }
diamond-node-subsystem-util = { path = "../../subsystem-util" }
diamond-subsystem = { package = "diamond-node-subsystem", path = "../../subsystem" }

[dev-dependencies]
log = "0.4.13"
env_logger = "0.9.0"
assert_matches = "1.4.0"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["std"] }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
parity-scale-codec = { version = "2.0.0", features = ["std"]  }

diamond-subsystem-testhelpers = { package = "diamond-node-subsystem-test-helpers", path = "../../subsystem-test-helpers" }
