[package]
name = "diamond-simnet"
version = "0.9.9"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
system = { package = "frame-system", git = "https://github.com/paritytech/substrate", branch = "master" }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate", branch = "master" }
benchmarking = { package = "frame-benchmarking", git = "https://github.com/paritytech/substrate", branch = "master" }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/paritytech/substrate", branch = "master" }
collective = { package = "pallet-collective", git = "https://github.com/paritytech/substrate", branch = "master" }
democracy = { package = "pallet-democracy", git = "https://github.com/paritytech/substrate", branch = "master" }

test-runner = { git = "https://github.com/paritytech/substrate", branch = "master" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "master" }

sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }

diamond-primitives = { path = "../../../../primitives" }
diamond-cli = { path = "../../../../cli", features = ["cli"] }
diamond-service = { path = "../../../../node/service" }
diamond-runtime = { path = "../../../../runtime/diamond" }
diamond-runtime-common = { path = "../../../../runtime/common" }

codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.23"

[dev-dependencies]
log = "0.4.14"
